Enabled preview feature in Maven